--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,31 @@
 /*BACKGROUND PICTURE*/
 
-.background {}
+#forest {
+    background-image: ;
+    width: 100%;
+    height: 60vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative;
+}
 
 
 /*SHREK IMAGE*/
 
-.shrek {}
+#shrek {
+    height: 300px;
+    position: absolute;
+    bottom: 0;
+}
 
 
 /*DONKEY IMAGE*/
 
-.donkey {}
+#donkey {
+    height: 300px;
+    position: absolute;
+    bottom: 0;
+}
 
 
 /*1 SHREK COMES IN */
