--- a/styles.css
+++ b/styles.css
@@ -67,12 +67,13 @@
 
 .shrekMirror {
     /*transform: scale(-1, 1);*/
-    animation: mirror 2s;
+    animation: mirror 1s forwards;
 }
 @keyframes mirror{
-
-    50%{transform:
-        scale(-1, 1);}
+    0%{margin-left: 400px;}
+    50%{transform: scale(-1, 1);
+    margin-left: 400px;}
+    100%{margin-left: 400px;}
 }
 
 
