--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
     height: 300px;
     position: absolute;
     bottom: 0;
+    left: -200px;
 }
 
 
@@ -29,6 +30,27 @@
     transform: translate(-200px);
 }
 
+#firstButton {
+    position: absolute;
+    top: 50px;
+    left: 300px;
+}
+.hidden {
+    display: none;
+}
+#peekButton {
+    position: absolute;
+    top: 50px;
+    left: 400px;
+}
+
+#scene3Button {
+
+    position: absolute;
+    top: 50px;
+    left: 500px;
+}
+
 
 /*1 SHREK COMES IN */
 
@@ -37,11 +59,9 @@
 }
 
 @keyframes moveingto {
-    0% {
-        transform: translate(-100px);
-    }
+
     100% {
-        transform: translate(400px);
+        transform: translate(600px);
     }
 }
 
@@ -70,13 +90,31 @@
     animation: mirror 1s forwards;
 }
 @keyframes mirror{
-    0%{margin-left: 400px;}
-    50%{transform: scale(-1, 1);
-    margin-left: 400px;}
-    100%{margin-left: 400px;}
+    50%{transform: scale(-1, 1);}
+  }
+    100%{transform: translate(400px);}
+
+
+.donkeySings {
+ animation: moveSingsMove 5s forwards;
 }
 
+@keyframes moveSingsMove {
+    0% {
+        transform: translate(-100px);
+    }
+    100% {
+        transform: translate(200px);
+    }
+}
 
+.shrekTurns {
+    animation: mirror 1s forwards;
+}
+@keyframes mirror{
+    100%{transform: scale(-1,1);}
+
+}
 /*3 DONKEY JUMPS IN*/
 
 
