--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,21 @@
 
 /*1 SHREK COMES IN */
 
+.shrekrotate{
+    animation: srotate 2s forwards;
+}
+
+@keyframes srotate{
+    20%, 40%, 60%, 80% {
+        transform: rotate(-5deg);
+    }
+
+    30%, 50%,70%, 90% {
+        transform: rotate(5deg);
+    }
+}
+
+
 .shrekMove {
     animation: moveingto 2s forwards;
 }
